<resources>
    <string name="app_name">LiqourStore</string>
    <string name="name">E-mail cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Magánszemély</string>
    <string name="seller">Kereskedő</string>
    <string name="product_description">Termék leírása.</string>

    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Info</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>
    <string name="liqourStore">LiqourStore</string>

    <string-array name="phone_labels">
        <item>Kor:</item>
        <item>18 alatt</item>
        <item>18–25</item>
        <item>25–40</item>
        <item>40–60</item>
        <item>60 felett</item>
    </string-array>

    <string-array name="shopping_item_names">
        <item>BALLANTINES</item>
        <item>WYBOROWA VODKA</item>
        <item>AHA TORO BLANCO</item>
        <item>METAXA</item>
        <item>AKORI GIN</item>
        <item>GONG VILMOSKÖRTE</item>
        <item>ARMAND DE BRIGNAC GOLD</item>
        <item>TROOPER IRON MAIDEN</item>
        <item>RODNIKS CANNABIS</item>
        <item>MONSTER ENERGY</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Whisky, Cikkszám: 15000, Kiszerelés: 1 liter</item>
        <item>Vodka, Cikkszám: 20001330, Kiszerelés: 0,5 liter</item>
        <item>Tequila, Cikkszám: 20001234, Kiszerelés: 0.7 liter</item>
        <item>Brandy, Cikkszám: 20000418, Kiszerelés: 2 liter</item>
        <item>Gin, Cikkszám: 21200032, Kiszerelés: 0.7 liter</item>
        <item>Pálinka, Cikkszám: 21500049, Kiszerelés: 0,5 liter</item>
        <item>Pezsgő, Cikkszám: 20200201, Kiszerelés: 0.75 liter</item>
        <item>Sör, Cikkszám: 20000999, Kiszerelés: 0.5 liter</item>
        <item>Absinthe, Cikkszám: 20007, Kiszerelés: 0.7 liter</item>
        <item>Energiaital, Cikkszám: 20000018, Kiszerelés: 0.5 liter</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>2.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/ballantines</item>
        <item>@drawable/wyborowa</item>
        <item>@drawable/ahatorotequila</item>
        <item>@drawable/metaxa</item>
        <item>@drawable/akorigin</item>
        <item>@drawable/gongpalinka</item>
        <item>@drawable/armandpezsgo</item>
        <item>@drawable/troopersor</item>
        <item>@drawable/rodnikabsinth</item>
        <item>@drawable/monster</item>
    </array>

    <array name="shopping_item_price">
        <item>7 200 Ft</item>
        <item>2 300 Ft</item>
        <item>16 000 Ft</item>
        <item>30 000 Ft</item>
        <item>11 000 Ft</item>
        <item>9 000 Ft</item>
        <item>80 000 Ft</item>
        <item>1 100 Ft</item>
        <item>7 550 Ft</item>
        <item>298 Ft</item>
    </array>
</resources>
